User Entity - Fix getAuthorities