@@ -2,6 +2,7 @@ package ShelterBooks.user;
 
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -64,7 +65,11 @@ public class User implements UserDetails{
 
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
-		return List.of(new SimpleGrantedAuthority(role.name()));
+		 if (this.role != null) {
+			 return List.of(new SimpleGrantedAuthority(role.name()));
+		 }
+		 
+		 return Collections.emptyList();
 	}
 
 	@Override
